[package]
name = "imxrt1060-pwm1"
version = "0.1.0"
authors = ["Ian McIntyre <ianpmcintyre@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bare-metal = "0.2.5"
cortex-m = "0.6.1"
vcell = "0.1.2"

[lib]
bench = false
test = false
