[package]
name = "imxrt1062-core"
version = "0.1.1"
authors = ["Ian McIntyre <ianpmcintyre@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mciantyre/teensy4-rs"
description = """
An imxrt1062-pac subcrate. See the imxrt1062-pac for more details.

This crate is not maintained. Consider using the register access layer provided by the
[imxrt-rs](https://github.com/imxrt-rs/imxrt-rs) project.

Part of the teensy4-rs project.
"""
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = [
    "arm",
    "svd2rust",
    "imxrt1062",
    "cortex-m",
]

[dependencies]
bare-metal = "0.2.5"
cortex-m = "0.6.1"
vcell = "0.1.2"

[lib]
bench = false
test = false
