[package]
name = "tools"
version = "0.1.0"
authors = ["Ian McIntyre <ianpmcintyre@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-toml = { path = "../cargo-toml" }
toml = "0.5.5"
serde = "1.0.104"
